# spdlog-packaging

./: .gitignore  CMakeLists.txt  README.md  main.cpp
MySpdlog/: CMakeLists.txt
MySpdlog/include/: logger.hpp  mylog.hpp
